@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-07-20T02:32:43Z",
+  "timestamp" : "2025-07-23T12:59:43Z",
   "count_outdated" : 5697,
   "uniques_outdated" : 1139,
-  "count" : 5708,
-  "uniques" : 1145,
+  "count" : 5709,
+  "uniques" : 1146,
   "views" : [
     {
       "timestamp": "2025-07-12T00:00:00Z",
@@ -28,6 +28,15 @@
       "count": 3,
       "count_minmax": [ 3, 3 ],
       "count_decinc": [ 0, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-07-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
