@@ -1,6 +1,6 @@
 {
-  "count": 11,
-  "uniques": 6,
+  "count": 12,
+  "uniques": 7,
   "views": [
     {
       "timestamp": "2025-07-12T00:00:00Z",
@@ -15,6 +15,11 @@
     {
       "timestamp": "2025-07-16T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-07-23T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
